kuber/k8n/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gateway:v1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microservices
spec:
  selector:
    app: gateway
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP  # смените на LoadBalancer при деплое в облако
